vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__app_server_branched_thread_history_line.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
expression: combined
---
• Thread branched from app-server-parent-thread (e9f18a88-8081-4e51-9d4e-8af5cde2d8dd)
