vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__app_server_branched_thread_history_line_without_app_server_name.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
expression: combined
---
• Thread branched from 019c2d47-4935-7423-a190-05691f566092
