vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__app_server_collab_spawn_completed_renders_requested_model_and_effort.snap
---
source: crates/surfaces/tui/src/chatwidget/tests/app_server.rs
assertion_line: 519
expression: combined
---

