vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__app_server_collab_wait_items_render_history.snap
---
source: crates/surfaces/tui/src/chatwidget/tests/app_server.rs
assertion_line: 459
expression: combined
---

