vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__app_server_mcp_startup_failure_renders_warning_history.snap
---
source: crates/surfaces/tui/src/chatwidget/tests/mcp_startup.rs
assertion_line: 122
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---



⚠ MCP client for `alpha` failed to start: handshake failed
⚠ MCP startup incomplete (failed: alpha)
 
 
› Ask VAC to do anything
 
  gpt-5.5 auto · /tmp/project
