vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__approval_modal_exec.snap
---
source: crates/surfaces/tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1101
expression: terminal.backend().vt100().screen().contents()
---
 
 
  approval required
 
  action kind  BASH  the agent wants to run a shell command
  cwd          /tmp/project
  context      runtime host · network inherit · writes policy-gated
  risk         process execution · operator approval required
  policy       this is a test reason such as one that would be produced by the model
  batch        batch 1/1 — policy-gated approval queue
 
  $ echo hello world
 
  hotkeys  y approve once   a approve+remember   n reject   r reject with reason
 
› 1. approve once (y)
  2. approve+remember · command prefix `echo hello world` (p)
  3. reject with reason (esc)
 
  Press enter to confirm or esc to cancel
