vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__approval_modal_exec_multiline_prefix_no_execpolicy.snap
---
source: crates/surfaces/tui/src/chatwidget/tests/exec_flow.rs
expression: contents
---


  approval required

  action kind  BASH  the agent wants to run a shell command
  cwd          /tmp/project
  context      runtime host · network inherit · writes policy-gated
  risk         process execution · operator approval required
  policy       vil.core policy gate requires explicit approval
  batch        batch 1/1 — policy-gated approval queue

  $ python - <<'PY'
  print('hello')
  PY

  hotkeys  y approve once   a approve+remember   n reject   r reject with reason

› 1. approve once (y)
  2. reject with reason (esc)

  Press enter to confirm or esc to cancel
