vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__approval_modal_patch.snap
---
source: crates/surfaces/tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1234
expression: contents
---


  approval required

  action kind  FILE_EDIT the agent wants to modify files
  cwd          /tmp/project
  risk         write mutation · review diff before applying
  policy       The model wants to apply changes
  hotkeys  y approve once   a approve+remember   n reject   r reject with reas

› 1. approve once (y)
  2. approve+remember · file edits (a)
  3. reject with reason (esc)

  Press enter to confirm or esc to cancel
